[project]
name = "stdlibx"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = [
    "furo==2025.12.19",
    "pytest==8.4.1",
    "pytest-mock==3.14.1",
    "ruff==0.12.7",
    "sphinx==7.4.7",
    "sphinx-autobuild==2024.10.3",
    "sphinx-copybutton==0.5.2",
    "sphinx-inline-tabs==2025.12.21.14",
]

[tool.ruff.lint]
extend-select = ["I", "RUF022", "RUF023", "W505", "TC", "FA", "C4", "PYI", "COM818"]
extend-ignore = ["D203", "D213"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 80

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.uv.workspace]
members = [
    "packages/stdlibx-cancel",
    "packages/stdlibx-result",
    "packages/stdlibx-option",
    "packages/stdlibx-compose",
    "packages/stdlibx-config",
    "packages/stdlibx-itertools",
    "packages/stdlibx-matchtools",
    "packages/stdlibx-streams",
]
